# Invoice-Sync

./: README.md  setup.sh
server/: .gitignore  activator  check_tasks.py  pyproject.toml  requirements.txt  verify_cloud_sync.py
server/.envs/: .development  .testing
server/config/: routing.py  urls.py  wsgi.py
server/cz_utils/: breadcrumbs.py  common_forms.py  crispy_forms_utils.py  dateparse.py  decimal_utils.py  decorators.py  exceptions.py  fargate_utils.py  functools.py  import_utils.py  itertools_utils.py  json_schema.py  json_utils.py  pdf_utils.py  pusher.py  qrcode_utils.py  queryset_utils.py  randomized_filename.py  session_utils.py  testing_utils.py  text_utils.py  url_utils.py  utils.py  uuid_utils.py  validation_utils.py  xlsxwriter_utils.py  xlsxwriter_views.py
server/gstnapi/: __init__.py  apps.py  models.py  tasks.py
server/invoicing/: apps.py  breadcrumbs.py  consumers.py  models.py  supervisord.conf  urls.py
server/scripts/: add_bulk_gstins.py  autosync_scheduler.py  backup_configuration.py  einvoice_action.py  reset_db.sh  run_tasks.py
server/seed_data/: README.md  create_demo_tenant.py  create_demo_user.py  create_public_tenant.py  create_sandbox_tenant.py  goods.txt  populate_config.py  populate_currency.py  populate_document_type.py  populate_einvoices.py  populate_hsncodes.py  populate_hsncodes_new.py  populate_hsngoods.py  populate_hsnservices.py  populate_portcode.py  populate_site.py  populate_states.py  populate_testing_bulk_data_sandbox.py  populate_testing_data_sandbox.py  populate_unit.py  port-codes-2.csv  port-codes.txt  (+2 more)
(+267 files in other folders)
