[project]
name = "einvoicing-local-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.37.34",
  "crispy-bootstrap4>=2024.10",
  "cx-oracle>=8.3.0",
  "django>=5.2",
  "django-bootstrap-pagination-nigelm>=2.1.0",
  "django-bootstrap4>=25.1",
  "django-crispy-forms>=2.4",
  "django-environ>=0.12.0",
  "django-extensions>=4.1",
  "django-nose>=1.4.7",
  "django-solo>=2.4.0",
  "django-storages>=1.14.6",
  "django-waitress>=0.1.0",
  "gunicorn>=23.0.0",
  "inflection>=0.5.1",
  "jsonfield>=3.1.0",
  "jsonschema>=4.23.0",
  "num2words>=0.5.14",
  "opencv-python>=4.11.0.86",
  "openpyxl>=3.1.5",
  "pip-tools>=7.4.1",
  "psycopg2-binary>=2.9.10",
  "pusher>=3.3.3",
  "pygstn",
  "pyodbc>=5.2.0",
  "pytz>=2025.2",
  "qrcode[pil]>=8.1",
  "requests>=2.32.3",
  "responses>=0.25.7",
  "ruff>=0.11.5",
  "sqlalchemy>=1<2",
  "supervisor>=4.2.5",
  "tablib>=3.8.0",
  "whitenoise>=6.9.0",
  "xlsxwriter>=3.2.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[tool.uv.sources]
pygstn = { git = "https://github.com/cloudzen-labs/pygstn.git" }

[tool.uv.extra-build-dependencies]
cx-oracle = ["setuptools<70"]
